corrected link and spacing top menu

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ li {
 #topleft {
   position: fixed;
   right: 160px;
-  top: 7px;
+  top: 18px;
   }
 #topright {
     position: fixed;
